--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             
         </head>
         <div class="grid-container">
+            <div class="display">2 + 4 = 0</div>
             <div id= '1'>1</div>
             <div id= '2'>2</div>
             <div id= '3'>3</div>
