--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
         </head>
         <div class="grid-container">
             <div class="display">2 + 4 = 0</div>
-            <div id= '1'>1</div>
-            <div id= '2'>2</div>
-            <div id= '3'>3</div>
-            <div id= '+'>+</div>
-            <div id= '4'>4</div>
-            <div id= '5'>5</div>
-            <div id= '6'>6</div>
-            <div id= '-'>-</div>
-            <div id= '7'>7</div>
-            <div id= '8'>8</div>
-            <div id= '9'>9</div>
-            <div id= '*'>*</div>
-            <div id= 'Clear'>Clear</div>
-            <div id= '0'>0</div>
-            <div id= '='>=</div>
-            <div id= '/'>/</div>
+            
+            <button id= '1'>1</button>
+            <button id= '2'>2</button>
+            <button id= '3'>3</button>
+            <button id= '+'>+</button>
+            <button id= '4'>4</button>
+            <button id= '5'>5</button>
+            <button id= '6'>6</button>
+            <button id= '-'>-</button>
+            <button id= '7'>7</button>
+            <button id= '8'>8</button>
+            <button id= '9'>9</button>
+            <button id= '*'>*</button>
+            <button id= 'Clear'>Clear</button>
+            <button id= '0'>0</button>
+            <button id= '='>=</button>
+            <button id= '/'>/</button>
         </div>
         
     </body>
